--- a/index.html
+++ b/index.html
@@ -9,10 +9,33 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+
+    <script src="https://kit.fontawesome.com/754405c26d.js"></script>
+    <style>
+        #header {
+            background: url("imgs/header.jpeg");
+            /*background: url("imgs/header.jpeg") center center / cover no-repeat;*/
+
+        }
+    </style>
     <title>Pattern</title>
 </head>
 
 <body>
+
+    <nav class="navbar bg-dark navbar-dark">
+        <div class="container">
+            <a href="#" class="navbar-brand"><i class="fas fa-binoculars mr-2"></i>Pattern</a>
+        </div>
+        
+    </nav>
+
+    <section id="header" class="jumbotron text-center">
+        <h1 class="display-3">PATTERN</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quibusdam temporibus provident in labore veritatis commodi ipsam unde sit perspiciatis.</p>
+        <a href="#" class="btn btn-primary">Do Something</a>
+        <a href="#" class="btn btn-success">Another Thing</a>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
