--- a/index.html
+++ b/index.html
@@ -37,6 +37,45 @@
         <a href="#" class="btn btn-success">Another Thing</a>
     </section>
 
+    <section id="gallery">
+       <div class="container">
+          <div class="row">
+              <div class="col-lg-4 mb-3">
+                    <div class="card">
+                            <img src="imgs/pattern1.jpeg" alt="" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">First Thing</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laudantium atque rerum ad enim hic fugiat accusamus totam dolore officia!</p>
+                                <a href="#" class="btn btn-outline-success btn-sm">Download</a><a href="#" class="btn btn-outline-danger btn-sm ml-2"><i class="far fa-heart "></i></a>
+                            </div>
+                        </div>
+              </div>
+
+              <div class="col-lg-4 mb-3">
+                    <div class="card">
+                            <img src="imgs/pattern2.jpeg" alt="" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">First Thing</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laudantium atque rerum ad enim hic fugiat accusamus totam dolore officia!</p>
+                                <a href="#" class="btn btn-outline-success btn-sm">Download</a><a href="#" class="btn btn-outline-danger btn-sm ml-2"><i class="far fa-heart "></i></a>
+                            </div>
+                        </div>
+              </div>
+
+              <div class="col-lg-4 mb-3">
+                    <div class="card">
+                            <img src="imgs/pattern3.jpeg" alt="" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">First Thing</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laudantium atque rerum ad enim hic fugiat accusamus totam dolore officia!</p>
+                                <a href="#" class="btn btn-outline-success btn-sm">Download</a><a href="#" class="btn btn-outline-danger btn-sm ml-2"><i class="far fa-heart "></i></a>
+                            </div>
+                        </div>
+              </div>
+          </div>
+       </div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
